<resources>
    <string name="app_name">Practice_RadioButton</string>
    <string name="et_num1_String">Fist Number</string>
    <string name="et_num2_String">Second Number</string>
    <string name="rb_addition_String">Add</string>
    <string name="rb_subtraction_String">Subtract</string>
    <string name="rb_division_String">Divide</string>
    <string name="rb_multiplication">Multiply</string>
    <string name="btn_calculte_String">Calculate</string>
    <string name="tv_result_String">Result</string>
</resources>